
                   Yii Framework Change Log
                   ========================

Version 1.0 to be released
--------------------------
- Refactored UserIdentity generated by yiic webapp (Qiang)
- Added hashByName option to asset manager (Qiang)
- Fixed a bug in CHtml::dropDownList() which doesn't render the 'name' attribute (Qiang)
- Added CHtml::openTag and CHtml::closeTag (Qiang)

Version 1.0rc November 10, 2008
-------------------------------
- Fixed issue #18: renderPartial should enable output caching to avoid session start issue (Qiang)
- Added $source parameter to YiiBase::t() (Qiang)
- Added CGettextMessageSource (Qiang)
- Added CHttpCookie.httpOnly property (Qiang)
- Changed CHtml::activeLabel so that it won't encode the label (Qiang)
- Fixed ticket #19: CHtml::activeCheckBox does not work as expected when unchecked (Qiang)
- Added CHtml::checkBoxList(), CHtml::radioButtonList() (Qiang)
- Added CHtml::activeCheckBoxList() and CHtml::activeRadioButtonList() (Qiang)
- Added support for persistent page state (Qiang)
- Added CDbCommandBuilder::createSearchCondition (Qiang)
- Added Hangman game demo (Qiang)
- Added support to allow controller classes to be organized in subdirectories (Qiang)
- Fixed issue #20: CBasePager throws undefined constant error (Qiang)
- Fixed an issue that affects pager's parameter initialization order (Qiang)
- Fixed a bug in determining FK relations in MySQL (Qiang)
- Added CHtml::ajaxSubmitButton (Qiang)
- Added CHtmlPurifier (Qiang)
- Added CMarkdown (Qiang)
- Added CDbConnection.charset (Qiang)
- Fixed a bug in CDbHttpSession that makes it not functional (Qiang)

Version 1.0b October 24, 2008
-----------------------------
- Added CWebServiceAction.serviceOptions (Qiang)
- Added CAPTCHA to application generated by yiic webapp (Qiang)
- Enabled CHtml::activeXXX to deal with multirow input (Qiang)
- Fixed issue #7: typo in CWebUser.id implementation (Qiang)