@@ -529,6 +529,7 @@ class YiiBase
 		'CMultiFileUpload' => '/web/widgets/CMultiFileUpload.php',
 		'COutputCache' => '/web/widgets/COutputCache.php',
 		'COutputProcessor' => '/web/widgets/COutputProcessor.php',
+		'CTabWidget' => '/web/widgets/CTabWidget.php',
 		'CTextHighlighter' => '/web/widgets/CTextHighlighter.php',
 		'CTreeView' => '/web/widgets/CTreeView.php',
 		'CWidget' => '/web/widgets/CWidget.php',
